<resources>
    <string name="app_name">MyCalculator</string>
    <string name="calc_text">0</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="multiply">*</string>
    <string name="_1">1</string>
    <string name="_3">3</string>
    <string name="Sub">-</string>
    <string name="_0">0</string>
    <string name="CLR">CLR</string>
    <string name="plus">+</string>
    <string name="equal">=</string>
    <string name="dot">.</string>
</resources>