<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/tvInput"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:background="@color/Light_grey"
        android:padding="10dp"
        android:textSize="48sp"
        android:text="@string/calc_text"
        android:gravity="right|bottom"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal">
        <!--onClick 사용  안함 : 코드 유지가 어려우점-->
        <Button
            android:layout_margin="2dp"
            android:id="@+id/btnSeven"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="OnDigit"
            android:text="7"
            />
        <Button
            android:layout_margin="2dp"
            android:id="@+id/btnEight"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:onClick="OnDigit"
            android:layout_weight="1"
            android:text="8"
            />

        <Button
            android:layout_margin="2dp"
            android:id="@+id/btnNine"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:onClick="OnDigit"
            android:layout_weight="1"
            android:text="9"
            />

        <Button
            android:id="@+id/btnDivide"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:onClick="onOperator"
            android:text="/" />


    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal">
        <!--onClick 사용  안함 : 코드 유지가 어려우점-->
        <Button
            android:layout_margin="2dp"
            android:id="@+id/btnfour"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="OnDigit"
            android:text="@string/_4"
            />
        <Button
            android:layout_margin="2dp"
            android:id="@+id/btnfive"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:onClick="OnDigit"
            android:layout_weight="1"
            android:text="@string/_5"
            />

        <Button
            android:layout_margin="2dp"
            android:id="@+id/btnsix"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:onClick="OnDigit"
            android:layout_weight="1"
            android:text="@string/_6"
            />
        <Button
            android:layout_margin="2dp"
            android:id="@+id/btnMultiply"
            android:layout_width="0dp"
            android:onClick="OnDigit"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/multiply"
            />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal">
        <!--onClick 사용  안함 : 코드 유지가 어려우점-->
        <Button
            android:layout_margin="2dp"
            android:id="@+id/btnOne"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="OnDigit"
            android:text="@string/_1"
            />
        <Button
            android:layout_margin="2dp"
            android:id="@+id/btnTwo"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:onClick="OnDigit"
            android:layout_weight="1"
            android:text="2"
            />

        <Button
            android:layout_margin="2dp"
            android:id="@+id/btnTree"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:onClick="OnDigit"
            android:layout_weight="1"
            android:text="@string/_3"
            />
        <Button
            android:layout_margin="2dp"
            android:id="@+id/btnSubtract"
            android:layout_width="0dp"
            android:onClick="onOperator"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/Sub"
            />




    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal">
        <!--onClick 사용  안함 : 코드 유지가 어려우점-->
        <Button
            android:layout_margin="2dp"
            android:id="@+id/btnDot"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="onDecimalPoint"
            android:text="@string/dot"
            />

        <Button
            android:layout_margin="2dp"
            android:id="@+id/btnZero"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="OnDigit"
            android:text="@string/_0"
            />



        <Button
            android:layout_margin="2dp"
            android:id="@+id/btnCLR"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:onClick="onClear"
            android:layout_weight="1"
            android:text="@string/CLR"
            />
        <Button
            android:layout_margin="2dp"
            android:id="@+id/btnAdd"
            android:layout_width="0dp"
            android:onClick="OnDigit"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/plus"
            />




    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal">
        <!--onClick 사용  안함 : 코드 유지가 어려우점-->
        <Button
            android:layout_margin="2dp"
            android:id="@+id/btnEqual"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:onClick="onEqual"
            android:text="@string/equal"
            />




    </LinearLayout>




</LinearLayout>